--- a/css/styles.css
+++ b/css/styles.css
@@ -141,8 +141,11 @@ h1 {
 /* #region First section */
 .first-section {
     padding: 188px 0;
-    background-color: #2E2F42;
     color: #FFFFFF;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/background/background.jpg);
+
 }
 
 .first-section-order-button {
