--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,10 @@ h1 {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
             url(../images/background/background.jpg);
-
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .first-section-order-button {
