--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,7 @@ h1 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin: 0 auto;
 }
 
 .first-section-order-button {
