--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,17 @@ h1 {
     overflow: hidden;
 }
 
+.icon-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
+
 .second-section-list {
     display: flex;
     gap: 24px;
