--- a/css/styles.css
+++ b/css/styles.css
@@ -352,7 +352,7 @@ h1 {
 }
 
 .fourth-section-list-item {
-    width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-fourth-section-name {
@@ -373,6 +373,36 @@ h1 {
 .fourth-section-paragraph {
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+
+.img-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay-text {
+    position: absolute;
+    top: 0;
+    padding: 40px 32px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-cloud, #f4f4fd);
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.fourth-section-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.fourth-section-list-item:hover .overlay-text {
+    transform: translateY(0%);
 }
 /* #endregion */
 /* #region Footer */
